force-app/main/default/objects/CRMforNonProfit__Certificate_Sending_Status__c/CRMforNonProfit__Certificate_Sending_Status__c.object-meta.xml
<CustomObject>
    <description>Object with stored data about sent certificates</description>
    <label>Certificate Sending Status</label>
    <nameField>
        <displayFormat>CSS - {000000000}</displayFormat>
        <label>CampaignSendingStatus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Sending Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>