force-app/main/default/objects/CRMforNonProfit__Certificate_Sending_Status__c/fields/CRMforNonProfit__Certificates_Sent__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Certificates_Sent__c</fullName>
    <description>Number of certificates already sent.</description>
    <inlineHelpText>Number of certificates already sent.</inlineHelpText>
    <label>Certificates Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>