force-app/main/default/objects/CRMforNonProfit__Certificate_Sending_Status__c/fields/CRMforNonProfit__Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>