force-app/main/default/objects/CRMforNonProfit__Certificate_Sending_Status__c/fields/CRMforNonProfit__Last_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Last_Email_Sent__c</fullName>
    <label>Last Email Sent</label>
    <type>Date</type>
</CustomField>