force-app/main/default/objects/CRMforNonProfit__Certificate_Sending_Status__c/fields/CRMforNonProfit__Listview_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Listview_Id__c</fullName>
    <label>Listview Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>