force-app/main/default/objects/CRMforNonProfit__Certificate_Sending_Status__c/fields/CRMforNonProfit__Sent_Today__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Sent_Today__c</fullName>
    <description>How many emails with certificates have been sent on the date stored in the Last Email Sent field</description>
    <label>Sent on Last Email Sent Date</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>