force-app/main/default/objects/CRMforNonProfit__Certificate_Sending_Status__c/fields/CRMforNonProfit__Status__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Status__c</fullName>
    <inlineHelpText>Status of sending.
In Preparation - job is preparing data
In Queue - job is waiting for another job to finish
Sending - certificates are being send
Complete for Today - We have reached limit of emails send
Complete - job is completed</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Preparation</fullName>
            </value>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Sending</fullName>
            </value>
            <value>
                <fullName>Complete for Today</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>