force-app/main/default/objects/CRMforNonProfit__Certificate_Sending_Status__c/fields/CRMforNonProfit__Total_Certificates_to_be_Send__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Total_Certificates_to_be_Send__c</fullName>
    <description>Number of certificates to be totally send by certificate sender.</description>
    <inlineHelpText>Number of certificates to be totally send by certificate sender.</inlineHelpText>
    <label>Total Certificates to be Send</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>