force-app/main/default/objects/CRMforNonProfit__Certificate_Sending_Status__c/fields/CRMforNonProfit__Year__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Year__c</fullName>
    <description>Year for which certificates are send.</description>
    <inlineHelpText>Year for which certificates are send.</inlineHelpText>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>