force-app/main/default/objects/CRMforNonProfit__Certificate_Sending_Status__c/listViews/CRMforNonProfit__All.listView-meta.xml
<ListView>
    <fullName>CRMforNonProfit__All</fullName>
    <columns>NAME</columns>
    <columns>CRMforNonProfit__Certificates_Sent__c</columns>
    <columns>CRMforNonProfit__Email_Template_Id__c</columns>
    <columns>CRMforNonProfit__Group__c</columns>
    <columns>CRMforNonProfit__Last_Email_Sent__c</columns>
    <columns>CRMforNonProfit__PDF_Template_Id__c</columns>
    <columns>CRMforNonProfit__Status__c</columns>
    <columns>CRMforNonProfit__Total_Certificates_to_be_Send__c</columns>
    <columns>CRMforNonProfit__Year__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>